add basic unit tests and coverage report